# UNITEC-EstructuraDatos-AutosJJ

./: .gitignore  AutosJJ.cpp  AutosJJ.h  CMakeLists.txt  README.md  indice.md  main.cpp
includes/: Constantes.h  PantallaEnum.h  vistas.h
modelos/: Cliente.h  CostosVehiculo.h  GastoReparacion.h  Proveedor.h  Vehiculo.h  Venta.h
servicios/: ClienteServicio.cpp  ClienteServicio.h  GastoReparacionServicio.cpp  GastoReparacionServicio.h  ProveedorServicio.cpp  ProveedorServicio.h  VehiculoServicio.cpp  VehiculoServicio.h  VentaServicio.cpp  VentaServicio.h
utilidades/: EditorCSV.cpp  EditorCSV.h  IO.cpp  IO.h  Utils.cpp  Utils.h
vistas/: dashboard.cpp  inicio.cpp  login.cpp  otros.cpp
vistas/clientes/: buscarClienteId.cpp  buscarClienteNombre.cpp  clientes.cpp  eliminarClienteId.cpp  listarClientes.cpp  registrarClientes.cpp
vistas/inventario/: inventario.cpp
vistas/proveedores/: buscarProveedorId.cpp  eliminarProveedor.cpp  listarProveedores.cpp  proveedores.cpp  registrarProveedor.cpp
vistas/reportes/: reportes.cpp
vistas/taller/: agregarGasto.cpp  taller.cpp  verGastos.cpp
vistas/vehiculos/: buscarVehiculoId.cpp  buscarVehiculoMarca.cpp  listarVehiculos.cpp  marcarReparado.cpp  registrarVehiculo.cpp  vehiculos.cpp
vistas/ventas/: listarVentas.cpp  registrarVenta.cpp  ventas.cpp
